overflow-x fixed for mobile

--- a/frontend/humid-oro/src/index.css
+++ b/frontend/humid-oro/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   overflow-x: hidden;
-  position: absolute;
+  /* position: relative; */
   color-scheme: light dark;
   color: #c1976e;
   color: sienna;
@@ -15,6 +15,12 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   min-height: 100vh;
+}
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 * {
   border-radius: 10px;
